--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>อัปโหลดหรือถ่ายภาพเพื่อประเมินผล</title>
     <style>
         body {
@@ -33,14 +35,14 @@
             border-radius: 5px;
         }
         input[type="submit"], button {
-            background-color: #F9C0AB;
+            background-color: #85A947;
             color: white;
             border: none;
             cursor: pointer;
             transition: 0.3s;
         }
         input[type="submit"]:hover, button:hover {
-            background-color: #F4E0AF;
+            background-color: #85A947;
         }
         video {
             display: block;
@@ -193,5 +195,8 @@
         // เริ่มต้นการดึงกล้องและการเริ่มต้นกล้อง
         getAvailableCameras().then(() => startCamera());
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 </html>
