--- a/templates/results.html
+++ b/templates/results.html
@@ -49,7 +49,7 @@
             text-align: center;
             margin: 20px auto;
             padding: 10px 20px;
-            background-color: #F9C0AB;
+            background-color: #85A947;
             color: white;
             text-decoration: none;
             border-radius: 5px;
