--- a/templates/index.html
+++ b/templates/index.html
@@ -1,49 +1,64 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>อัปโหลดหรือถ่ายภาพเพื่อประเมินผล</title>
+    <link href='https://fonts.googleapis.com/css?family=Sarabun' rel='stylesheet'>
+
+    <title>อัปโหลดหรือถ่ายภาพเพื่อประมวลผล</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Sarabun';
             margin: 0;
             padding: 0;
-            background: linear-gradient(135deg, #355F2E, #A8CD89);
+            background: linear-gradient(135deg, #088395, #FBFFDC);
             height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
         }
+
         .container {
-            max-width: 600px;
+            max-width: 1000px;
+            margin: 50px auto;
             padding: 20px;
             background-color: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
-        h1, h2 {
+
+        h1,
+        h2 {
             text-align: center;
             color: #333;
         }
-        input[type="file"], input[type="submit"], button {
+
+        input[type="file"],
+        input[type="submit"],
+        button {
             display: block;
             margin: 15px auto;
             padding: 10px 20px;
             border-radius: 25px;
         }
-        input[type="submit"], button {
-            background-color: #85A947;
+
+        input[type="submit"],
+        button {
+            background-color: #7BD3EA;
             color: white;
             border: none;
             cursor: pointer;
             transition: 0.3s;
         }
-        input[type="submit"]:hover, button:hover {
-            background-color: #6E8C3D;
+
+        input[type="submit"]:hover,
+        button:hover {
+            background-color: #A7ECEE;
         }
+
         video {
             display: block;
             margin: 20px auto;
@@ -51,25 +66,43 @@
             max-width: 400px;
             border-radius: 8px;
         }
+
         canvas {
             display: none;
         }
+
         .button-group {
             display: flex;
             justify-content: center;
             gap: 10px;
             margin-top: 15px;
         }
+
+        @media (max-width: 576px) {
+            .container {
+                width: 95%;
+                /* เพิ่มความชิดขอบในหน้าจอเล็ก */
+            }
+
+            .button-group button {
+                width: 100%;
+            }
+
+            video {
+                width: 100%;
+            }
+        }
     </style>
 </head>
+
 <body>
     <div class="container">
-        <h1>อัปโหลดหรือถ่ายภาพเพื่อประเมินผล</h1>
+        <h1 style="font-weight: bold; color: #333; text-align: center;">อัปโหลดหรือถ่ายภาพเพื่อประมวลผล</h1>
         <form action="/upload/" enctype="multipart/form-data" method="post">
-            <input name="file" type="file" required>
+            <input name="file" class="form-control mt-3" type="file" required>
             <input type="submit" value="อัปโหลด">
         </form>
-        
+
         <h2>หรือถ่ายภาพ</h2>
         <video id="video" autoplay></video>
         <div class="button-group">
@@ -164,16 +197,17 @@
                     method: 'POST',
                     body: formData
                 })
-                .then(response => response.text())
-                .then(result => document.write(result))
-                .catch(error => console.error('Error:', error));
+                    .then(response => response.text())
+                    .then(result => document.write(result))
+                    .catch(error => console.error('Error:', error));
             });
         });
 
         getAvailableCameras().then(() => startCamera());
     </script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
