--- a/templates/results.html
+++ b/templates/results.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<link href='https://fonts.googleapis.com/css?family=Sarabun' rel='stylesheet'>
+
     <title>ผลลัพธ์การประเมิน</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Sarabun';
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #355F2E, #A8CD89);
+            background: linear-gradient(to right, #088395, #FBFFDC);
             color: #333;
         }
         .container {
-            max-width: 800px;
+            max-width: 1000px;
             margin: 50px auto;
             padding: 20px;
             background-color: #fff;
@@ -22,7 +26,9 @@
         }
         h2, h3 {
             text-align: center;
-            color: #355F2E;
+            color: #088395;
+            font-weight: bold; 
+            text-align: center;
         }
         img {
             display: block;
@@ -49,7 +55,7 @@
             text-align: center;
             margin: 20px auto;
             padding: 10px 20px;
-            background-color: #85A947;
+            background-color: #7BD3EA;
             color: white;
             text-decoration: none;
             border-radius: 5px;
@@ -57,12 +63,27 @@
             transition: background-color 0.3s;
         }
         .back-button:hover {
-            background-color: #355F2E;
+            background-color: #A7ECEE;
         }
         p {
             text-align: justify;
             line-height: 1.8;
             margin: 10px 0;
+        }
+
+        @media (max-width: 576px) {
+            .container {
+                width: 95%;
+                /* เพิ่มความชิดขอบในหน้าจอเล็ก */
+            }
+
+            .button-group button {
+                width: 100%;
+            }
+
+            video {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -83,5 +104,12 @@
         </ul>
         <a href="/" class="back-button">กลับไปที่หน้าส่งรูป</a>
     </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
+
 </html>
