--- a/templates/index.html
+++ b/templates/index.html
@@ -98,6 +98,7 @@
 <body>
     <div class="container">
         <h1 style="font-weight: bold; color: #333; text-align: center;">อัปโหลดหรือถ่ายภาพเพื่อประมวลผล</h1>
+        <p style="text-align: center; color: #555;">สำหรับการวินิจฉัยและติดตามโรคเบาหวาน</p>
         <form action="/upload/" enctype="multipart/form-data" method="post">
             <input name="file" class="form-control mt-3" type="file" required>
             <input type="submit" value="อัปโหลด">
@@ -115,96 +116,95 @@
             <input id="captured-image" name="file" type="hidden">
         </form>
     </div>
-
     <script>
-        const video = document.getElementById('video');
-        const canvas = document.getElementById('canvas');
-        const captureButton = document.getElementById('capture');
-        const toggleCameraButton = document.getElementById('toggle-camera');
-        const switchCameraButton = document.getElementById('switch-camera');
-        const captureForm = document.getElementById('capture-form');
-        const capturedImageInput = document.getElementById('captured-image');
-        let stream = null;
-        let currentStreamTrack = null;
-        let currentCamera = 'user';
+    const video = document.getElementById('video');
+    const canvas = document.getElementById('canvas');
+    const captureButton = document.getElementById('capture');
+    const toggleCameraButton = document.getElementById('toggle-camera');
+    const switchCameraButton = document.getElementById('switch-camera');
+    const captureForm = document.getElementById('capture-form');
+    const capturedImageInput = document.getElementById('captured-image');
+    let stream = null;
+    let currentStreamTrack = null;
+    let currentCamera = 'user';
 
-        let videoDevices = [];
-        let currentDevice = null;
+    let videoDevices = [];
+    let currentDevice = null;
 
-        async function getAvailableCameras() {
-            try {
-                const devices = await navigator.mediaDevices.enumerateDevices();
-                videoDevices = devices.filter(device => device.kind === 'videoinput');
-                currentDevice = videoDevices.find(device => device.label.includes(currentCamera === 'user' ? 'front' : 'back')) || videoDevices[0];
-            } catch (err) {
-                console.error('Error fetching cameras:', err);
-            }
+    async function getAvailableCameras() {
+        try {
+            const devices = await navigator.mediaDevices.enumerateDevices();
+            videoDevices = devices.filter(device => device.kind === 'videoinput');
+            currentDevice = videoDevices.find(device => device.label.includes(currentCamera === 'user' ? 'front' : 'back')) || videoDevices[0];
+        } catch (err) {
+            console.error('Error fetching cameras:', err);
         }
+    }
 
-        async function startCamera() {
-            if (!currentDevice) return;
-            try {
-                const constraints = {
-                    video: {
-                        deviceId: { exact: currentDevice.deviceId }
-                    }
-                };
-                if (stream) stopCamera();
-                stream = await navigator.mediaDevices.getUserMedia(constraints);
-                video.srcObject = stream;
-                currentStreamTrack = stream.getVideoTracks()[0];
-            } catch (err) {
-                console.error('Error accessing webcam:', err);
-            }
+    async function startCamera() {
+        if (!currentDevice) return;
+        try {
+            const constraints = {
+                video: {
+                    deviceId: { exact: currentDevice.deviceId }
+                }
+            };
+            if (stream) stopCamera();
+            stream = await navigator.mediaDevices.getUserMedia(constraints);
+            video.srcObject = stream;
+            currentStreamTrack = stream.getVideoTracks()[0];
+        } catch (err) {
+            console.error('Error accessing webcam:', err);
         }
+    }
 
-        function stopCamera() {
-            if (stream) {
-                const tracks = stream.getTracks();
-                tracks.forEach(track => track.stop());
-                video.srcObject = null;
-                stream = null;
-                currentStreamTrack = null;
-            }
+    function stopCamera() {
+        if (stream) {
+            const tracks = stream.getTracks();
+            tracks.forEach(track => track.stop());
+            video.srcObject = null;
+            stream = null;
+            currentStreamTrack = null;
         }
+    }
 
-        toggleCameraButton.addEventListener('click', () => {
-            if (stream) {
-                stopCamera();
-                toggleCameraButton.textContent = 'เปิดกล้อง';
-            } else {
-                startCamera();
-                toggleCameraButton.textContent = 'ปิดกล้อง';
-            }
-        });
-
-        switchCameraButton.addEventListener('click', async () => {
-            currentCamera = currentCamera === 'user' ? 'environment' : 'user';
-            await getAvailableCameras();
+    toggleCameraButton.addEventListener('click', () => {
+        if (stream) {
+            stopCamera();
+            toggleCameraButton.textContent = 'เปิดกล้อง';
+        } else {
             startCamera();
-        });
+            toggleCameraButton.textContent = 'ปิดกล้อง';
+        }
+    });
 
-        captureButton.addEventListener('click', () => {
-            const context = canvas.getContext('2d');
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            context.drawImage(video, 0, 0, canvas.width, canvas.height);
-            canvas.toBlob(blob => {
-                const file = new File([blob], "captured_image.png", { type: 'image/png' });
-                const formData = new FormData();
-                formData.append('file', file);
-                fetch('/upload/', {
-                    method: 'POST',
-                    body: formData
-                })
-                    .then(response => response.text())
-                    .then(result => document.write(result))
-                    .catch(error => console.error('Error:', error));
-            });
-        });
+    switchCameraButton.addEventListener('click', async () => {
+        currentCamera = currentCamera === 'user' ? 'environment' : 'user';
+        await getAvailableCameras();
+        startCamera();
+    });
 
-        getAvailableCameras().then(() => startCamera());
-    </script>
+    captureButton.addEventListener('click', () => {
+        const context = canvas.getContext('2d');
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        context.drawImage(video, 0, 0, canvas.width, canvas.height);
+        canvas.toBlob(blob => {
+            const file = new File([blob], "captured_image.png", { type: 'image/png' });
+            const formData = new FormData();
+            formData.append('file', file);
+            fetch('/upload/', {
+                method: 'POST',
+                body: formData
+            })
+                .then(response => response.text())
+                .then(result => document.write(result))
+                .catch(error => console.error('Error:', error));
+        });
+    });
+
+    getAvailableCameras().then(() => startCamera());
+</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
