--- a/templates/form.html
+++ b/templates/form.html
@@ -97,8 +97,8 @@
 
 <body>
     <div class="container">
-        <h1 style="font-weight: bold; color: #333; text-align: center;">อัปโหลดหรือถ่ายภาพเพื่อประมวลผล</h1>
-        <p style="text-align: center; color: #555;">สำหรับการวินิจฉัยและติดตามโรคเบาหวาน</p>
+        <h1 style="font-weight: bold; color: #333; text-align: center;">สำหรับการวินิจฉัยและติดตามโรคเบาหวาน</h1>
+        <p style="text-align: center; color: #555;">อัปโหลดหรือถ่ายภาพเพื่อประมวลผล</p>
         <form action="/upload/" enctype="multipart/form-data" method="post">
             <input name="file" class="form-control mt-3" type="file" required>
             <input type="submit" value="อัปโหลด">
